<?xml version="1.0" encoding="utf-8"?>

<!--
This defines the layout for a login activity. Pretty straightforward: a login edit field, a
password edit field, a sign-in button and a register button. Note: I did not add a "confirm"
password field when registering, since the password field allows the user's entry to be displayed.

~ Copyright (c) 2016 C. Todd Cook. All rights reserved.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/email_login_form"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.ctoddcook.android.personcrud.LoginActivity">

  <!-- LOGIN field -->
  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_input_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"/>

  </android.support.design.widget.TextInputLayout>

  <!-- PASSWORD field -->
  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_input_hint"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"/>

  </android.support.design.widget.TextInputLayout>

  <!-- SIGN IN button -->
  <Button
      android:id="@+id/log_in_button"
      style="?android:textAppearanceSmall"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/action_sign_in"
      android:textStyle="bold"/>

  <!-- REGISTER button -->
  <Button
      android:id="@+id/register_button"
      style="?android:textAppearanceSmall"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/action_register"
      android:textStyle="bold"/>


</LinearLayout>
